# algebraic-laws

./: README.md  algebraic-laws.cabal  cabal.project  stylish.sh
src/Applicative/: Laws.hs
src/Eq/: Laws.hs
src/Functor/: Laws.hs
src/Monoid/: Laws.hs
src/Ord/: Laws.hs
src/Semigroup/: Laws.hs
src/Test/: Generation.hs
test/: Test.hs
test/Eq/: Test.hs
test/Functor/: Test.hs
test/Monoid/: Test.hs
test/Ord/: Test.hs
test/Semigroup/: Test.hs
